# sunday08october23

./: CMakeLists.txt
sunday/: aria_triunghi.c  factorial1.c  invers_vocale.c  max_position.c  numere_impare.c  numere_pare.c  sort_array.c  vocale.c
